repositories {
	jcenter()
}
buildscript {
	ext { 
		verifierVersion = '2.2.4.RELEASE'
	}
	repositories { 
		mavenCentral()
	}
	dependencies { 
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
		classpath "org.springframework.cloud:spring-cloud-contract-gradle-plugin:${verifierVersion}"
		// PACT dependencies
		classpath "org.springframework.cloud:spring-cloud-contract-pact:${verifierVersion}"
	}
}

group = 'cf.dbaltor'

apply plugin: 'application'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'maven-publish'
apply plugin: 'spring-cloud-contract'

application {
    mainClassName = 'book.BookApplication'
}

applicationDefaultJvmArgs = ["--enable-preview"]

sourceCompatibility = 11
targetCompatibility = 11

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.flywaydb:flyway-core'
	//implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	// https://mvnrepository.com/artifact/io.rest-assured/spring-mock-mvc
	testImplementation 'io.rest-assured:spring-mock-mvc:4.3.0'
	// includes com.sun.xml.bind:jaxb-osgi used by spring-mock-mvc
	testImplementation 'io.rest-assured:xml-path:4.2.0'

	implementation 'org.springdoc:springdoc-openapi-ui:1.5.9'
	// API doc urls: JSON <app-url>/v3/api-docs YAML <app-url>/v3/api-docs.yaml Swagger <app-url>/swagger-ui.html

	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-all'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'io.github.openfeign:feign-okhttp'
	implementation "io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}"
    //implementation("io.github.resilience4j:resilience4j-all:${resilience4jVersion}") 
	// required due to https://github.com/resilience4j/resilience4j/issues/1151
	implementation "io.github.resilience4j:resilience4j-circuitbreaker:${resilience4jVersion}" 
	implementation "io.github.resilience4j:resilience4j-timelimiter:${resilience4jVersion}" 
	//implementation 'org.springframework.boot:spring-boot-starter-aop' // required by resilience4j
	////implementation "io.micrometer:micrometer-registry-prometheus" // may be used by resilience4j"

	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'

	testImplementation 'junit:junit:4.13'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	implementation 'com.github.javafaker:javafaker:1.0.1'
	
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
}

contracts {
	baseClassForTests = 'book.BookBase' // fallback base class
}
